# ontorag-memory

./: .gitignore  LICENSE  README.ko.md  README.md  pyproject.toml
examples/: demo_relationship_discovery.py
skills/: claude-code-context.md  claude-code.md  hermes.md
src/ontorag_memory/: __init__.py  cli.py  client.py  diary.py  graph_stats.py  identity.py  lifecycle.py  mcp_server.py  registry.py  why_result.py
src/ontorag_memory/default/: registry.yaml
tests/: test_identity.py  test_integration.py  test_mcp_server.py  test_p0_p1_features.py  test_p1_integration.py  test_p2_features.py  test_p3_transitive.py
