[project]
name = "ontorag-memory"
version = "0.1.0"
description = "Structured agent memory layer over ontorag — ontology-backed persistent memory for AI agents (Claude Code, Hermes, etc.)."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "강재호 (Kang Jaeho)", email = "greennuri@gmail.com" }]
keywords = [
    "ontology", "rdf", "memory", "agent", "mcp",
    "claude-code", "hermes", "knowledge-graph",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ontorag[mcp]>=1.1.1",
    "pyyaml>=6.0",
    "typer[all]>=0.12",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "pyright>=1.1.380",
]

[project.scripts]
ontorag-memory = "ontorag_memory.cli:app"

[project.urls]
Homepage = "https://github.com/nuri428/ontorag-memory"
Repository = "https://github.com/nuri428/ontorag-memory"
"Sister repo (ontorag)" = "https://github.com/nuri428/ontorag"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ontorag_memory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires live Fuseki"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "PLC"]

[tool.uv.sources]
# 로컬 개발 시 워크스페이스의 ontorag를 직접 참조
ontorag = { path = "../ontorag", editable = true }
